[package]
name = "histogram_text_matcher"
version = "0.0.0"
edition = "2021"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level=3
incremental=true

[lib]
# Prevent capturing of benchmark commandline arguments... https://github.com/rust-lang/rust/issues/47241
bench = false

[dependencies]
serde = {version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
image = { version ="0.25.1", default-features=false, features=["png"]}
imageproc = {version = "0.24.0"}
ab_glyph = "0.2.23"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "bench_scan_image"
harness = false

