[package]
name = "histogram_text_matcher"
version = "0.0.0"
edition = "2021"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"

[profile.release]
debug = 1

[lib]
# Prevent capturing of benchmark commandline arguments... https://github.com/rust-lang/rust/issues/47241
bench = false

[dependencies]
serde = {version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
image = { version ="0.25.1", default-features=false, features=["png"]}
ab_glyph = "0.2.23"
imageproc = {version = "0.24.0", optional=true}

[dev-dependencies]
criterion = "0.5.1"
clap = {version="4.5.4", features=["std"]}
imageproc = {version = "0.24.0"}

[[bench]]
name = "bench_scan_image"
harness = false

